--- a/app/design/frontend/base/default/template/lemonway/form/webkit.phtml
+++ b/app/design/frontend/base/default/template/lemonway/form/webkit.phtml
@@ -7,7 +7,7 @@ $_code=$this->getMethodCode();
 <ul class="form-list" id="oneclic_payment_form_<?php echo $_code ?>">
  <li>
 
-	<?php if (!$this->customerHasCardId()) :?>
+	<?php if (!$this->customerHasCardId() || !$this->customerHasCardNum()) :?>
 			<div class="input-box">
 				<input id="<?php echo $_code ?>_register_card"  value="register_card"  type="checkbox" name="payment[oneclic]" />
 				<label style="float: none;" for="<?php echo $_code ?>_register_card"><?php echo $this->__('Save your card data for a next buy.') ?></label>
@@ -22,9 +22,11 @@ $_code=$this->getMethodCode();
 				<label><?php echo $this->__('Actual card') ?> :</label>
 				<span><?php echo $this->getCardNum() ?></span>
 			</div>
-			<div class="input-box info-card">
-				<label><?php echo $this->__('Expiration date') ?> : <?php echo $this->getCardExp() ?></label>
-			</div>
+			<?php if($this->getCardExp() != ""):?>
+				<div class="input-box info-card">
+					<label><?php echo $this->__('Expiration date') ?> : <?php echo $this->getCardExp() ?></label>
+				</div>
+			<?php endif;?>
 			
 			<div class="input-box">
 				<input id="<?php echo $_code ?>_register_card"  type="radio" name="payment[oneclic]" value="register_card"/>
